# Nyanlang

./: LICENSE  README.md  hello world.nyan  helper.py  interpreter.py  nyan.py  pyproject.toml  translation
examples/: 9x9.nyan  hello world.nyan
examples/hello name/: main.mouse  main.nyan  name print.mouse  name print.nyan  special character print.nyan
examples/hello name/modules/: name print.mouse  name print.nyan  special character print.nyan
nyanlang/: __init__.py  debugger.py  helper.py  nyan.py  nyan.pyi
test/: test.py
test/test_source/: hello world.nyan
translation/: hello world.bf  hello world.nyan
