[tool.poetry]
name = "nyanlang"
version = "1.3.4"
description = "A Cutest Programming Language"
authors = ["sserve-kr <personal@sserve.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
nyan = "nyanlang:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
