[tool.poetry]
name = "nyanlang"
version = "1.3.5"
description = "A Cutest Programming Language"
authors = ["sserve-kr <personal@sserve.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
socketio = "^5.8.0"
eventlet = "^0.33.3"

[tool.poetry.scripts]
nyan = "nyanlang:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
